Github action to build installers and assembly on release